# OffTheRecordPatch

./: .gitmodules  CMakeLists.txt  OffTheRecordPatch.ini  README.md
include/: Addresses.h  Core.h  Logging.h  PatchVersion.h  SteamAPI.h  config.h  inject.h  outfits.h
include/dr2/: Player.h  cFrontEnd.h  tActorAssignment.h  tPushableGoalInfo.h
src/: Core.cpp  GameAddresses.cpp  SteamAPI.cpp  config.cpp  dllmain.cpp  inject.cpp
src/dr2/: Player.cpp  cFrontEnd.cpp
